--- a/index.html
+++ b/index.html
@@ -58,3 +58,10 @@
         <a href="#feedback">feedback</a>
      </nav>
       
+     <h1>biodata</h1>
+     <table border="1">
+        <tr>
+            <th>first name</th>
+            <th>last name</th>
+            <th>age</th>
+            
